fix(cards): Adding missing overflow for cards

--- a/src/elements/card/_Card.scss
+++ b/src/elements/card/_Card.scss
@@ -13,6 +13,7 @@ novo-card {
         position: relative;
         border-radius: 3px;
         max-height: 550px;
+        overflow: auto;
 
         header {
             display: flex;
